<resources>
    <string name="app_name">系统管家</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="wifi">无线: OFF</string>
    <string name="bluetooth">蓝牙: OFF</string>
    <string name="electric_quantity">电量: 0%</string>
    <string name="mute">静音: OFF</string>
    <string name="system_setup">系统设置</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_account_title">添加账号</string>
    <string name="add_qq_describe">添加用于QQ一键登录的QQ账号</string>
    <string name="qq_username_hint">QQ号码</string>
    <string name="qq_password_hint">密码</string>
    <string name="toast_open_bluetooth_success">开启蓝牙成功</string>
    <string name="toast_open_bluetooth_fail">开启蓝牙失败</string>
    <string name="toast_close_bluetooth_success">关闭蓝牙成功</string>
    <string name="toast_close_bluetooth_fail">关闭蓝牙失败</string>
    <string name="toast_open_wifi_success">开启Wifi成功</string>
    <string name="toast_open_wifi_fail">开启Wifi失败</string>
    <string name="toast_close_wifi_success">关闭Wifi成功</string>
    <string name="toast_close_wifi_fail">关闭Wifi失败</string>
    <string name="toast_set_mute_success">设置静音成功</string>
    <string name="toast_set_mute_fail">设置静音失败</string>
    <string name="toast_cancel_mute_success">取消静音成功</string>
    <string name="toast_cancel_mute_fail">取消静音失败</string>
    <string name="toast_username_password_false">账号或密码错误</string>
    <string name="toast_no_have_find_qq">没有找到QQ</string>
    <string name="ed_error_account_null">账号不能为空</string>
    <string name="ed_error_password_null">密码不能为空</string>
    <string name="sign_in">登录</string>
    <string name="can_not_sign_in">无法登录</string>
    <string name="go_to_sign_up">立即注册</string>
    <string name="toast_close_flash_light_success">关闭手电筒成功</string>
    <string name="toast_close_flash_light_fail">关闭手电筒失败</string>
    <string name="toast_open_flash_light_success">开启手电筒成功</string>
    <string name="toast_open_flash_light_fail">开启手电筒失败</string>
    <string name="toast_please_open_location">位置信息未打开，请打开</string>
    <string name="toast_scanning">开始搜索...</string>
    <string name="air_mode">飞行模式: OFF</string>
    <string name="title_air_mode_on">飞行模式: ON</string>
    <string name="title_air_mode_off">飞行模式: OFF</string>
    <string name="title_bluetooth_on">蓝牙: ON</string>
    <string name="title_bluetooth_off">蓝牙: OFF</string>
    <string name="title_wifi_on">无线: ON</string>
    <string name="title_wifi_off">无线: OFF</string>
    <string name="title_electric_quantity">电量：</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="toast_not_supported_bluetooth">不支持蓝牙</string>
    <string name="toast_not_supported_wifi">不支持Wifi</string>
    <string name="comments_title">意见和反馈</string>
    <string name="hint_please_input_your_comments">请填写您的意见和反馈...</string>
    <string name="comments_tv_name">姓名:</string>
    <string name="comments_tv_telephone">手机:</string>
    <string name="comments_tv_qq_number">QQ号:</string>
    <string name="battery_electric_quantity">电池电量：</string>
    <string name="battery_health_unknown">UNKNOWN</string>
    <string name="battery_health_good">GOOD</string>
    <string name="battery_health_overheat">OVERHEAT</string>
    <string name="battery_health_dead">DEAD</string>
    <string name="battery_health_over_voltage">OVER VOLTAGE</string>
    <string name="battery_health_unspecified_failure">UNSPECIFIED FAILURE</string>
    <string name="battery_health_cold">COLD</string>
    <string name="battery_health">电池健康度:</string>
    <string name="battery_status">电池状态:</string>
    <string name="battery_status_unknown">没有安装电池</string>
    <string name="battery_status_charging">正在充电</string>
    <string name="battery_status_full">已经充满</string>
    <string name="battery_status_discharging">放电中</string>
    <string name="battery_status_not_charging">未充电</string>
    <string name="low_battery_need_charging">[电量过低，请充电]</string>
    <string name="battery_not_charging">[未连接充电器]</string>
    <string name="battery_charge_style">充电方式：</string>
    <string name="battery_charge_AC">充电器充电</string>
    <string name="battery_charge_USB">USB充电</string>
    <string name="battery_charge_WIRELESS">无线充电</string>
    <string name="battery">电池</string>
    <string name="wifi_list">Wifi列表</string>
    <string name="signal_intensity">信号强度</string>
    <string name="start_scan">开始扫描</string>
    <string name="avail_memory_text">可用内存:</string>
    <string name="total_memory_text">手机总内存:</string>
    <string name="add_notepad_title">增加备忘录</string>
    <string name="remove_notepad_title">清空备忘录</string>
    <string name="notepad_title">备忘录</string>
    <string name="sound_volume_title">音量调节</string>
    <string name="setting_voice_call">当前通话音量:</string>
    <string name="setting_music">当前媒体音量:</string>
    <string name="setting_alarm">当前闹钟音量:</string>
    <string name="setting_ring">当前铃声音量:</string>
    <string name="brightness_title">亮度调节</string>
    <string name="system_brightness">当前的亮度为:</string>
    <string name="dialog_notepad">输入备忘录</string>
    <string name="electric_quantity_attention">低电量提示</string>
    <string name="electric_quantity_less_than_twenty">电量已少于20%，请尽快充电</string>
    <string name="notification_id">attention</string>
    <string name="notification_des">电量提示</string>
    <string name="add_event">添加事件</string>
    <string name="sure_event">确定</string>
    <string name="exit_event">取消</string>
    <string name="edit_event">编辑记事本</string>

</resources>
