<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item android:title="@string/system_setup">
            <menu>
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_menu_wifi"
                    android:title="@string/wifi" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_bluetooth"
                    android:title="@string/bluetooth" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_electric_quantity"
                    android:title="@string/electric_quantity" />
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_menu_mute"
                    android:title="@string/mute" />
            </menu>
        </item>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_manage"
                android:title="Send" />
        </menu>
    </item>

</menu>
